# acltool

./: .cirrus.yml  Makefile  Makefile.am  Makefile.dist  Makefile.in  README  TODO  Test.acl  aclcmds.c  aclcmds.h  acltool.c  acltool.h  acltool.man  argv.c  argv.h  basic.c  basic.h  buffer.c  buffer.h  cmd_edit.c  cmd_edit_access.c  commands.c  commands.h  common.c  common.h  config.h  config.h.in  configure  configure.ac  error.c  error.h  ft_test  ft_test.c  gacl.c  gacl.h  gacl.h.OLD  gacl_impl.c  gacl_impl.h  lac  linux.c  (+20 more)
.github/workflows/: ccpp.yml
doc/: ACL-FORMAT.txt  FreeBSD.txt  Linux.txt  PRIMOS.txt  SORT-ORDER.txt  Samba.txt  Windows.txt  icacls.txt
gnu/: Makefile.am
ips/: README
old/: configure.no-autoconf
patches/: samba-libsmbclient-xattr-acl.patch
pkgs/: Makefile  Makefile.dist  Makefile.in  Makefile.port.in  acltool.rb.in  acltool.spec.in  build.sh  build.sh.in  pkg-descr.in
pkgs/brew/: Makefile  Makefile.in  README  acltool.rb
pkgs/ips/: Makefile  README  acltool.p5m  build.sh  build.sh.in
pkgs/old/: Makefile  README
pkgs/old/done/brew/: Makefile  README  acltool.rb  acltool.rb.in
pkgs/old/done/port/: Makefile.port  Makefile.port.in
pkgs/old/done/rpm/: Makefile  README  acltool.spec
pkgs/old/done/svr/: pkginfo
pkgs/old/ips/: acltool.mog  acltool.p5m  build.sh  build.sh.in
pkgs/port/: Makefile  Makefile.in  Makefile.port  README
pkgs/rpm/: Makefile  acltool.spec  acltool.spec.in
pkgs/svr/: Makefile  Makefile.in  README  pkginfo  pkginfo.in
port/: Makefile  Makefile.in  README  pkg-descr
rpm/: README  acltool.spec  acltool.spec.in
